<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
style="@style/CustomWidHieMatch">
<android.support.design.widget.AppBarLayout
    style="@style/CustomWidHie"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <include layout="@layout/toolbar"/>
</android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginBottom="40dp"
            android:textSize="40sp"/>
        <EditText
            android:id="@+id/uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwrd"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:text="@string/login"
            android:onClick="login"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
